<resources>
    <string name="app_name">Zaliczenie</string>
    <string name="API_KEY">368423982aa12505</string>
    <string name="API_URL">https://api.fullcontact.com/v2/person.json?email=</string>
    <string name="login_header">Login or register account</string>
    <string name="name">username</string>
    <string name="password_hint">password</string>
    <string name="log_in">Login</string>
    <string name="search">Find a person by their email</string>
    <string name="register">Register</string>
    <string name="placeholderImage">http://sunfieldfarm.org/wp-content/uploads/2014/02/profile-placeholder.png</string>
    <string name="logout">Logout</string>
    <string name="addFavourites">Add to favourites</string>
    <string name="removeFavourites">Remove from favourites</string>
    <string name="favourites">Favourites</string>
    <string name="home">Home</string>
    <string name="email">Email</string>
    <string name="Search">Search</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google">Google Plus</string>
    <string name="github">Github</string>
    <string name="website">Website</string>
    <string name="appName">PersonAPI</string>
</resources>
