<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kacper.zaliczenie.DetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/personImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="40dp"
                android:layout_marginRight="20dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/location"
                android:layout_toEndOf="@+id/personImage"
                android:layout_toRightOf="@+id/personImage"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/personImage"
                android:layout_toEndOf="@+id/personImage"
                android:layout_toRightOf="@+id/personImage"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/personImage"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/facebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facebook" />

                    <TextView
                        android:id="@+id/facebookId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/twitter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/twitter" />

                    <TextView
                        android:id="@+id/twitterId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/google"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/google" />

                    <TextView
                        android:id="@+id/googleId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/github"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/github" />

                    <TextView
                        android:id="@+id/githubId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/website"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/website" />

                    <TextView
                        android:id="@+id/websiteId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:textSize="15sp" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
